--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -L --exec babel-node index.js"
+    "dev": "nodemon -L --exec babel-node src/server.js"
   },
   "author": "Sungin Lee<dlrkehrud@naver.com>",
   "license": "MIT",
