--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sungIn95/wetube-reloaded#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
