--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -L --exec babel-node src/init.js"
+    "dev": "nodemon -L --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "author": "Sungin Lee<dlrkehrud@naver.com>",
   "license": "MIT",
@@ -32,6 +33,8 @@
     "@babel/core": "^7.18.2",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
