--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.18.2",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
