--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "nodemon": "^2.0.16",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
