--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.16",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
