--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
